<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipe_refresh_orders"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_back"
    tools:context=".view.activities.OrderScreenActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_main"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardElevation="4dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="180dp"
                    android:layout_gravity="bottom">
                    <TextView
                        android:id="@+id/tv_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+2"
                        android:layout_gravity="bottom|end"
                        android:textColor="@color/white"
                        android:background="@color/orange"
                        android:textSize="12sp"
                        android:layout_marginBottom="25dp"
                        android:layout_marginEnd="@dimen/small"
                        android:fontFamily="@font/montserrat_light"
                        android:paddingHorizontal="@dimen/small"/>
                    <TextView
                        android:id="@+id/tv_incoming"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:text="@string/incoming"
                        android:paddingVertical="2dp"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/textBlack"
                        android:paddingHorizontal="@dimen/small"
                        android:background="@drawable/incoming_background"/>
                </FrameLayout>
                <androidx.appcompat.widget.Toolbar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|end">
                        <ImageButton
                            android:id="@+id/ib_to_ingredients"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:background="@android:color/transparent"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_baseline_ingre"
                            android:layout_gravity="bottom"/>
                        <TextView
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:text="@string/mcc_holder"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:fontFamily="@font/montserrat_medium"
                            android:textColor="@color/textBlack"
                            android:textSize="@dimen/text_fourteen"
                            android:layout_marginHorizontal="@dimen/medium"/>
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_more_vert_24"
                            android:background="@android:color/transparent"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.Toolbar>



            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/order_fetch_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateOnly="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order_fetch_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/textBlack"
            android:fontFamily="@font/sofia_pro"
            android:textStyle="italic"
            android:text="@string/no_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_fetch_progress" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/home_back"
            tools:listitem="@layout/item_order_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_main" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>